--- a/Prototype/Prototype/Assembly-CSharp.csproj
+++ b/Prototype/Prototype/Assembly-CSharp.csproj
@@ -55,8 +55,10 @@
   <ItemGroup>
      <Compile Include="Assets\Art\AurynSky\Gems Ultimate Pack\Scripts\AnimationScript.cs" />
      <Compile Include="Assets\Scripts\GameLogic\Bike.cs" />
+     <Compile Include="Assets\Scripts\GameLogic\LevelManager.cs" />
      <Compile Include="Assets\Scripts\Prototyping\Audio\AudioManager.cs" />
      <Compile Include="Assets\Scripts\Prototyping\Camera\FollowCamera.cs" />
+     <Compile Include="Assets\Scripts\Prototyping\Camera\Rotator.cs" />
      <Compile Include="Assets\Scripts\Prototyping\Collectable\TriggerEvent.cs" />
      <Compile Include="Assets\Scripts\Prototyping\Score\ScoreManager.cs" />
      <Compile Include="Assets\Scripts\Prototyping\Timer\GameTimer.cs" />
